traversal.snake.Snake.scala.code
override def run() {baisseBrosse();while(0){var y=0; {if (estFaceMur() && y==0){gauche();avance();gauche();y=y+1};if(estFaceMur()&& y==1){droite;avance;droite;y=y-1};else {avance()}};baisseBrosse()
                                           }}


//def a(){x=getDirection();setDirection(Direction.EAST);if(estFaceMur()){gauche();if (estFaceMur()){setDirection(x);return true}};else {setDirection(x);return false}}